@@ -1,0 +1,6 @@
+#!/usr/bin/env bash
+
+set -ex
+
+export ELECTRON_VERSION="32.2.5"
+export VSCODE_ELECTRON_TAG="v${ELECTRON_VERSION}"
